--- a/src/main/webapp/vistas/personalatencionusuarios/List.xhtml
+++ b/src/main/webapp/vistas/personalatencionusuarios/List.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/templates/templateBase.xhtml">
 
 
         <ui:define name="title">
@@ -16,77 +16,86 @@
         <ui:define name="body">
             <h:form id="PersonalatencionusuariosListForm">
                 <p:panel header="#{bundle.ListPersonalatencionusuariosTitle}">
-                    <p:dataTable id="datalist" value="#{personalatencionusuariosController.items}" var="item"
+                    <p:contextMenu for="datalist">     
+                        <p:menuitem id="editButton"   value="#{bundle.Edit}" icon="ui-icon-pencil"  update=":PersonalatencionusuariosEditForm" oncomplete="PF('PersonalatencionusuariosEditDialog').show()" />
+                        <p:menuitem id="viewButton"   value="#{bundle.View}" icon="ui-icon-search"  update=":PersonalatencionusuariosViewForm" oncomplete="PF('PersonalatencionusuariosViewDialog').show()" />
+                    </p:contextMenu>
+                        <p:dataTable id="datalist" value="#{personalatencionusuariosController.items}" var="item"
                                  selectionMode="single" selection="#{personalatencionusuariosController.selected}"
                                  paginator="true"
                                  rowKey="#{item.usuario}"
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
-
-                        <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
-                        <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
-
+                        <f:facet name="header">
+                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{personalatencionusuariosController.prepareCreate}" update=":PersonalatencionusuariosCreateForm" oncomplete="PF('PersonalatencionusuariosCreateDialog').show()"/>                              
+                        </f:facet>  
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPersonalatencionusuariosTitle_nombre}"/>
+                                <h:outputText value="#{bundle.PersonalatencionusuariosTitle_nombre}"/>
                             </f:facet>
-                            <h:outputText value="#{item.nombre}"/>
+                            <h:outputText value="#{item.nombre} #{item.apellidopa} #{item.apellidoma}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPersonalatencionusuariosTitle_apellidopa}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.apellidopa}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPersonalatencionusuariosTitle_apellidoma}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.apellidoma}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPersonalatencionusuariosTitle_telefono}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.telefono}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPersonalatencionusuariosTitle_correo}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.correo}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPersonalatencionusuariosTitle_puesto}"/>
+                                <h:outputText value="#{bundle.PersonalatencionusuariosTitle_puesto}"/>
                             </f:facet>
                             <h:outputText value="#{item.puesto}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPersonalatencionusuariosTitle_usuario}"/>
+                                <h:outputText value="#{bundle.PersonalatencionusuariosTitle_usuario}"/>
                             </f:facet>
                             <h:outputText value="#{item.usuario}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPersonalatencionusuariosTitle_pwd}"/>
+                                <h:outputText value="#{bundle.PersonalatencionusuariosTitle_pwd}"/>
                             </f:facet>
                             <h:outputText value="#{item.pwd}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPersonalatencionusuariosTitle_status}"/>
+                                <h:outputText value="#{bundle.PersonalatencionusuariosTitle_status}"/>
                             </f:facet>
-                            <h:outputText value="#{item.status}"/>
+                            <h:outputText value="#{personalatencionusuariosController.status(item.status)}"/>
                         </p:column>
-                        <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{personalatencionusuariosController.prepareCreate}" update=":PersonalatencionusuariosCreateForm" oncomplete="PF('PersonalatencionusuariosCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":PersonalatencionusuariosViewForm" oncomplete="PF('PersonalatencionusuariosViewDialog').show()" disabled="#{empty personalatencionusuariosController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":PersonalatencionusuariosEditForm" oncomplete="PF('PersonalatencionusuariosEditDialog').show()" disabled="#{empty personalatencionusuariosController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{personalatencionusuariosController.destroy}" update=":growl,datalist" disabled="#{empty personalatencionusuariosController.selected}"/>
-                        </f:facet>
+                        <p:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.PersonalatencionusuariosTitle_atcNormal}"/>
+                            </f:facet>
+                            <p:selectBooleanCheckbox value="#{item.atcNormal}" disabled="true"/>
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.PersonalatencionusuariosTitle_atcGestores}"/>
+                            </f:facet>
+                            <p:selectBooleanCheckbox value="#{item.atcGestores}" disabled="true"/>
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.PersonalatencionusuariosTitle_atcRatificacion}"/>
+                            </f:facet>
+                            <p:selectBooleanCheckbox value="#{item.atcRatificacion}" disabled="true"/>
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.PersonalatencionusuariosTitle_reportes}"/>
+                            </f:facet>
+                            <p:selectBooleanCheckbox value="#{item.reportes}" disabled="true"/>
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.PersonalatencionusuariosTitle_usuarios}"/>
+                            </f:facet>
+                            <p:selectBooleanCheckbox value="#{item.usuarios}" disabled="true"/>
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.PersonalatencionusuariosTitle_manual}"/>
+                            </f:facet>
+                            <p:selectBooleanCheckbox value="#{item.manual}" disabled="true"/>
+                        </p:column>
                     </p:dataTable>
                 </p:panel>
             </h:form>
