--- a/src/main/webapp/vistas/personalatencionusuarios/View.xhtml
+++ b/src/main/webapp/vistas/personalatencionusuarios/View.xhtml
@@ -3,7 +3,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
     <ui:composition>
@@ -11,30 +10,46 @@
         <p:dialog id="PersonalatencionusuariosViewDlg" widgetVar="PersonalatencionusuariosViewDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewPersonalatencionusuariosTitle}">
             <h:form id="PersonalatencionusuariosViewForm">
                 <h:panelGroup id="display">
-                    <p:panelGrid columns="2" rendered="#{personalatencionusuariosController.selected != null}">
-                        <h:outputText value="#{bundle.ViewPersonalatencionusuariosLabel_nombre}"/>
-                        <h:outputText value="#{personalatencionusuariosController.selected.nombre}" title="#{bundle.ViewPersonalatencionusuariosTitle_nombre}"/>
-                        <h:outputText value="#{bundle.ViewPersonalatencionusuariosLabel_apellidopa}"/>
-                        <h:outputText value="#{personalatencionusuariosController.selected.apellidopa}" title="#{bundle.ViewPersonalatencionusuariosTitle_apellidopa}"/>
-                        <h:outputText value="#{bundle.ViewPersonalatencionusuariosLabel_apellidoma}"/>
-                        <h:outputText value="#{personalatencionusuariosController.selected.apellidoma}" title="#{bundle.ViewPersonalatencionusuariosTitle_apellidoma}"/>
-                        <h:outputText value="#{bundle.ViewPersonalatencionusuariosLabel_telefono}"/>
-                        <h:outputText value="#{personalatencionusuariosController.selected.telefono}" title="#{bundle.ViewPersonalatencionusuariosTitle_telefono}"/>
-                        <h:outputText value="#{bundle.ViewPersonalatencionusuariosLabel_correo}"/>
-                        <h:outputText value="#{personalatencionusuariosController.selected.correo}" title="#{bundle.ViewPersonalatencionusuariosTitle_correo}"/>
-                        <h:outputText value="#{bundle.ViewPersonalatencionusuariosLabel_puesto}"/>
-                        <h:outputText value="#{personalatencionusuariosController.selected.puesto}" title="#{bundle.ViewPersonalatencionusuariosTitle_puesto}"/>
-                        <h:outputText value="#{bundle.ViewPersonalatencionusuariosLabel_usuario}"/>
-                        <h:outputText value="#{personalatencionusuariosController.selected.usuario}" title="#{bundle.ViewPersonalatencionusuariosTitle_usuario}"/>
-                        <h:outputText value="#{bundle.ViewPersonalatencionusuariosLabel_pwd}"/>
-                        <h:outputText value="#{personalatencionusuariosController.selected.pwd}" title="#{bundle.ViewPersonalatencionusuariosTitle_pwd}"/>
-                        <h:outputText value="#{bundle.ViewPersonalatencionusuariosLabel_status}"/>
-                        <h:outputText value="#{personalatencionusuariosController.selected.status}" title="#{bundle.ViewPersonalatencionusuariosTitle_status}"/>
-                    </p:panelGrid>
-                    <p:commandButton value="#{bundle.Close}" onclick="PersonalatencionusuariosViewDialog.hide()"/>
+                    <p:fieldset legend="#{bundle.DetallesPanel}" style="margin-bottom:20px">
+                        <p:panelGrid columns="2" rendered="#{personalatencionusuariosController.selected != null}" styleClass="ui-panelgrid-blank">
+                            <h:outputText value="#{bundle.PersonalatencionusuariosLabel_nombre}"/>
+                            <h:outputText value="#{personalatencionusuariosController.selected.nombre}" title="#{bundle.PersonalatencionusuariosTitle_nombre}"/>
+                            <h:outputText value="#{bundle.PersonalatencionusuariosLabel_apellidopa}"/>
+                            <h:outputText value="#{personalatencionusuariosController.selected.apellidopa}" title="#{bundle.PersonalatencionusuariosTitle_apellidopa}"/>
+                            <h:outputText value="#{bundle.PersonalatencionusuariosLabel_apellidoma}"/>
+                            <h:outputText value="#{personalatencionusuariosController.selected.apellidoma}" title="#{bundle.PersonalatencionusuariosTitle_apellidoma}"/>
+                            <h:outputText value="#{bundle.PersonalatencionusuariosLabel_telefono}"/>
+                            <h:outputText value="#{personalatencionusuariosController.selected.telefono}" title="#{bundle.PersonalatencionusuariosTitle_telefono}"/>
+                            <h:outputText value="#{bundle.PersonalatencionusuariosLabel_correo}"/>
+                            <h:outputText value="#{personalatencionusuariosController.selected.correo}" title="#{bundle.PersonalatencionusuariosTitle_correo}"/>
+                            <h:outputText value="#{bundle.PersonalatencionusuariosLabel_puesto}"/>
+                            <h:outputText value="#{personalatencionusuariosController.selected.puesto}" title="#{bundle.PersonalatencionusuariosTitle_puesto}"/>
+                            <h:outputText value="#{bundle.PersonalatencionusuariosLabel_usuario}"/>
+                            <h:outputText value="#{personalatencionusuariosController.selected.usuario}" title="#{bundle.PersonalatencionusuariosTitle_usuario}"/>
+                            <h:outputText value="#{bundle.PersonalatencionusuariosLabel_pwd}"/>
+                            <h:outputText value="#{personalatencionusuariosController.selected.pwd}" title="#{bundle.PersonalatencionusuariosTitle_pwd}"/>
+                            <h:outputText value="#{bundle.PersonalatencionusuariosLabel_status}"/>
+                            <h:outputText value="#{personalatencionusuariosController.status(personalatencionusuariosController.selected.status)}" title="#{bundle.PersonalatencionusuariosTitle_status}"/>                           
+                        </p:panelGrid>
+                    </p:fieldset>
+                    <p:fieldset legend="#{bundle.RolesTitle}" style="margin-bottom:20px">
+                        <p:panelGrid columns="2" rendered="#{personalatencionusuariosController.selected != null}" styleClass="ui-panelgrid-blank">
+                            <h:outputText value="#{bundle.PersonalatencionusuariosLabel_atcNormal}"/>
+                            <p:selectBooleanCheckbox value="#{personalatencionusuariosController.selected.atcNormal}" disabled="true"/>
+                            <h:outputText value="#{bundle.PersonalatencionusuariosLabel_atcGestores}"/>
+                            <p:selectBooleanCheckbox value="#{personalatencionusuariosController.selected.atcGestores}" disabled="true"/>
+                            <h:outputText value="#{bundle.PersonalatencionusuariosLabel_atcRatificacion}"/>
+                            <p:selectBooleanCheckbox value="#{personalatencionusuariosController.selected.atcRatificacion}" disabled="true"/>
+                            <h:outputText value="#{bundle.PersonalatencionusuariosLabel_reportes}"/>
+                            <p:selectBooleanCheckbox value="#{personalatencionusuariosController.selected.reportes}" disabled="true"/>
+                            <h:outputText value="#{bundle.PersonalatencionusuariosLabel_usuarios}"/>
+                            <p:selectBooleanCheckbox value="#{personalatencionusuariosController.selected.usuarios}" disabled="true"/>
+                            <h:outputText value="#{bundle.PersonalatencionusuariosLabel_manual}"/>
+                            <p:selectBooleanCheckbox value="#{personalatencionusuariosController.selected.manual}" disabled="true"/>
+                        </p:panelGrid>
+                    </p:fieldset>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
-
     </ui:composition>
 </html>
