--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -15,11 +15,11 @@
 
                     <!-- Id's must not be changed to support spring security check -->
                     <h:panelGrid columns="3">
-                    <h:outputLabel for="j_username" value="User: * " />  
+                    <h:outputLabel for="j_username" value="Usuario: * " />  
                     <h:inputText id="j_username" required="true" label="username" />  
                     <h:message for="j_username" style="color:red"/>
 
-                    <h:outputLabel for="j_password" value="Password: * " />  
+                    <h:outputLabel for="j_password" value="Cantraseña: * " />  
                     <h:inputSecret id="j_password" label="password" required="true" />  
                     <h:message for="j_password" style="color:red"/>
      
