--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -11,21 +11,18 @@
             <ui:define name="body">
                 <h:form id="loginForm" prependId="false">
                     <center>
-                    <h:messages/>
 
                     <!-- Id's must not be changed to support spring security check -->
-                    <h:panelGrid columns="3">
+                    <h:panelGrid columns="2">
                     <h:outputLabel for="j_username" value="Usuario: * " />  
-                    <h:inputText id="j_username" required="true" label="username" />  
-                    <h:message for="j_username" style="color:red"/>
+                    <h:inputText id="j_username" required="true" label="username" requiredMessage="Es necesario ingresar el usuario"/>  
 
-                    <h:outputLabel for="j_password" value="Cantraseña: * " />  
-                    <h:inputSecret id="j_password" label="password" required="true" />  
-                    <h:message for="j_password" style="color:red"/>
+                    <h:outputLabel for="j_password" value="Contraseña: * " />  
+                    <h:inputSecret id="j_password" label="password" required="true"  requiredMessage="Es necesario ingresar la contraseña"/>
      
                     </h:panelGrid>
 
-                    <h:commandButton type="submit" id="login" value="Login" action="#{loginnController.doLogin}" />
+                    <h:commandButton type="submit" id="login" value="Accesar" action="#{loginnController.doLogin}" />
                     </center>
                 </h:form>
             </ui:define>
