--- a/src/main/webapp/vistas/documentosnotas/Create.xhtml
+++ b/src/main/webapp/vistas/documentosnotas/Create.xhtml
@@ -8,28 +8,14 @@
 
     <ui:composition>
 
-        <p:dialog id="DocumentosnotasCreateDlg" widgetVar="DocumentosnotasCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateDocumentosnotasTitle}">
+        <p:dialog id="DocumentosnotasCreateDlg" widgetVar="DocumentosnotasCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateDocumentosnotasTitle}">           
             <h:form id="DocumentosnotasCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{documentosnotasController.selected != null}">
-                        <p:outputLabel value="#{bundle.CreateDocumentosnotasLabel_iddocumentonota}" for="iddocumentonota" />
-                        <p:inputText id="iddocumentonota" value="#{documentosnotasController.selected.iddocumentonota}" title="#{bundle.CreateDocumentosnotasTitle_iddocumentonota}" required="true" requiredMessage="#{bundle.CreateDocumentosnotasRequiredMessage_iddocumentonota}"/>
                         <p:outputLabel value="#{bundle.CreateDocumentosnotasLabel_notaword}" for="notaword" />
                         <p:inputText id="notaword" value="#{documentosnotasController.selected.notaword}" title="#{bundle.CreateDocumentosnotasTitle_notaword}" />
-                        <p:outputLabel value="#{bundle.CreateDocumentosnotasLabel_notapdf}" for="notapdf" />
-                        <p:inputText id="notapdf" value="#{documentosnotasController.selected.notapdf}" title="#{bundle.CreateDocumentosnotasTitle_notapdf}" />
-                        <p:outputLabel value="#{bundle.CreateDocumentosnotasLabel_relacionimg}" for="relacionimg" />
-                        <p:inputText id="relacionimg" value="#{documentosnotasController.selected.relacionimg}" title="#{bundle.CreateDocumentosnotasTitle_relacionimg}" />
-                        <p:outputLabel value="#{bundle.CreateDocumentosnotasLabel_acuse}" for="acuse" />
-                        <p:inputText id="acuse" value="#{documentosnotasController.selected.acuse}" title="#{bundle.CreateDocumentosnotasTitle_acuse}" />
-                        <p:outputLabel value="#{bundle.CreateDocumentosnotasLabel_idnota}" for="idnota" />
-                        <p:selectOneMenu id="idnota" value="#{documentosnotasController.selected.idnota}" required="true" requiredMessage="#{bundle.EditDocumentosnotasRequiredMessage_idnota}">
-                            <f:selectItems value="#{notasController.itemsAvailableSelectOne}"
-                                           var="idnotaItem"
-                                           itemValue="#{idnotaItem}"/>
-                        </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{documentosnotasController.create}" value="#{bundle.Save}" update="display,:DocumentosnotasListForm:datalist,:growl" oncomplete="handleSubmit(args,'DocumentosnotasCreateDialog');"/>
+                    <p:commandButton actionListener="#{documentosnotasController.create}" value="#{bundle.Save}" update=":NotasListForm:datalist,:growl" oncomplete="handleSubmit(args,'DocumentosnotasCreateDialog');"/>
                     <p:commandButton value="#{bundle.Cancel}" onclick="DocumentosnotasCreateDialog.hide()"/>
                 </h:panelGroup>
             </h:form>
